// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a string with a link with arbitrary attributes 1`] = `
Array [
  <span>
    A link 
  </span>,
  <a
    class="button"
    href="http://something1"
    target="_blank"
  >
    in the
  </a>,
  <span>
     middle
  </span>,
]
`;

exports[`Renders a string with multiple links in it 1`] = `
Array [
  <span>
    A link 
  </span>,
  <a
    href="http://something1"
  >
    in the
  </a>,
  <span>
     middle and one 
  </span>,
  <a
    href="http://something2"
  >
    in the end
  </a>,
  <span>
    
  </span>,
]
`;

exports[`Renders a string with no links in it 1`] = `
<span>
  No links in the string
</span>
`;

exports[`Renders a string with one link in the middle 1`] = `
Array [
  <span>
    A link 
  </span>,
  <a
    href="http://something"
  >
    in the
  </a>,
  <span>
     middle
  </span>,
]
`;

exports[`Renders nothing when the string is not there 1`] = `<span />`;
